<resources>
    <string name="app_name">Cavosh Cafe</string>

    <string name="facebook_app_id">1917431435684473</string>
    <string name="fb_login_protocol_scheme">fb1917431435684473</string>
    <string name="facebook_client_token">ef48c1446a9ac89f3f0ce8edeb053d19</string>


    <string name="default_web_client_id">855425233119-0vhk9nk0l6ksp52bn8v4jvso1bi1j9hk.apps.googleusercontent.com</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="menu">Menu</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="pedidos">Pedidos</string>
    <string name="content_description">contentDescription</string>
    <string name="iniciar">Iniciar</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="correo">Correo</string>
    <string name="passwordd">Contraseña</string>
    <string name="olvidar_passwordd">Olvidar Contraseña</string>
</resources>