<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.OlvidarPasswordd">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_header_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:background="@drawable/sh_bg_white" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_white_smoke"
                android:paddingVertical="10dp"
                android:paddingHorizontal="30dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/blumine"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_cinnabar"
                android:paddingVertical="10dp"
                android:paddingHorizontal="30dp"
                android:elevation="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:hintEnabled="false"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_white_smoke"
                android:padding="12dp"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:hint="@string/correo"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="bottom|center"
            android:background="@drawable/sh_bg_blumine"
            android:text="Enviar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿Tienes una cuenta ?"
            android:textColor="@color/blumine" />

        <TextView
            android:id="@+id/tvIniciaSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Inicia Sesion"
            android:textColor="@color/misty_rose" />

    </LinearLayout>

</FrameLayout>