<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.Registrar">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_header_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:background="@drawable/sh_bg_white" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_white_smoke"
                android:paddingVertical="10dp"
                android:paddingHorizontal="30dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/blumine"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_cinnabar"
                android:paddingVertical="10dp"
                android:paddingHorizontal="30dp"
                android:elevation="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:hintEnabled="false"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNombres"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_white_smoke"
                android:padding="12dp"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:hint="Nombres"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_white_smoke"
                android:padding="12dp"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:hint="@string/correo"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_white_smoke"
                android:padding="12dp"
                android:inputType="textPassword"
                android:maxLength="20"
                android:hint="@string/passwordd"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmarPasswordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmarPasswordd"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_white_smoke"
                android:padding="12dp"
                android:inputType="textPassword"
                android:maxLength="20"
                android:hint="Confirmar contraseña"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@drawable/sh_bg_blumine"
            android:text="Registrar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/cinnabar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="-5dp"
                android:text=" Registrate usando "
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/cinnabar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="115dp"
                android:layout_height="85dp"
                android:background="@drawable/sh_bg_misty_rose">

                <ImageView
                    android:id="@+id/ivFacebook"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_facebook"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="115dp"
                android:layout_height="85dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/sh_bg_misty_rose">

                <ImageView
                    android:id="@+id/ivGoogle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_google_plus"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="115dp"
                android:layout_height="85dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/sh_bg_misty_rose">

                <ImageView
                    android:id="@+id/ivApple"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_apple"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿Tienes una cuenta ?"
            android:textColor="@color/blumine" />

        <TextView
            android:id="@+id/tvIniciaSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Inicia Sesion"
            android:textColor="@color/misty_rose" />

    </LinearLayout>

</FrameLayout>